Delete drug
